Fix title and style bleed.

--- a/static/global.css
+++ b/static/global.css
@@ -1,12 +1,17 @@
 /*  import google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 
-html, body {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
 }
+
+fieldset {
+    padding: 6px 12px;
+}
+
 html{
     scroll-behavior: smooth;
 }
